tests/fails/vector_index.mat
matrix A[3,2]
matrix row[1,2]

row = A[1]